tests/NormalTests/paczka1/fuzzy1/26389916.err
Error in line 4: xkba A700 60,6
Error in line 7: yUnGHb19KR S174 49,2
Error in line 10: yUnGHb19KR A700 67,2
Error in line 11: wFO5x45DA6l S145 16,8
Error in line 25: pSklfhfMBl S174 56,4
Error in line 31: FeaYQJMYl A700 26,0
